Small structure changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
       <nav>
         <button id="use-btn" type="button"><i class="fa fa-cogs"></i> How to Use</button>
-        <a href="https://github.com/eisenfox/fox-hover" title="Download Full HTMl/CSS Files"><i class="fa fa-arrow-down"></i>Download Full HTMl/CSS Files</a>
+        <a href="https://github.com/eisenfox/intermediate-hover-pack" title="Download Full HTMl/CSS Files" target="_blank"><i class="fa fa-arrow-down"></i>Download Full HTMl/CSS Files</a>
         <a href="#" title="Tutorial"><i class="fa fa-pencil"></i>Tutorial (Coming soon)</a>
       </nav>
       <div class="descr">
@@ -75,7 +75,7 @@
         <div class="addthis_sharing_toolbox"></div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-1">
           <span class="effect-title">Effect #1</span>
           <div class="effect eff-1">
             <img src="img/ef1.jpg" alt="Effect #1" />
@@ -327,7 +327,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-2">
           <span class="effect-title">Effect #2</span>
           <div class="effect eff-2">
             <img src="img/ef2.jpg" alt="Effect #2" />
@@ -577,7 +577,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-3">
           <span class="effect-title">Effect #3</span>
           <div class="effect eff-3">
             <img src="img/ef3.jpg" alt="Effect #3" />
@@ -833,7 +833,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-4">
           <span class="effect-title">Effect #4</span>
           <div class="effect eff-4">
             <img src="img/ef4.jpg" alt="Effect #4" />
@@ -1159,7 +1159,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-5">
           <span class="effect-title">Effect #5</span>
           <div class="effect eff-5">
             <img src="img/ef5.jpg" alt="Effect #5" />
@@ -1509,7 +1509,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-6">
           <span class="effect-title">Effect #6</span>
           <div class="effect eff-6">
             <img src="img/ef6.jpg" alt="Effect #6" />
@@ -1799,7 +1799,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-7">
           <span class="effect-title">Effect #7</span>
           <div class="effect eff-7">
             <div class="img-block">
@@ -2116,7 +2116,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-8">
           <span class="effect-title">Effect #8</span>
           <div class="effect eff-8">
             <div class="img-block">
@@ -2442,7 +2442,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-9">
           <span class="effect-title">Effect #9</span>
           <div class="effect eff-9">
             <div class="img-block">
@@ -2734,7 +2734,7 @@
           </div>
         </div>
       </div>
-      <div class="effect-pack">
+      <div class="effect-pack" id="eff-10">
         <div class="effect-bar">
           <span class="effect-title">Effect #10</span>
           <div class="effect eff-10">
@@ -2954,7 +2954,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-11">
           <span class="effect-title">Effect #11</span>
           <div class="effect eff-11">
             <img src="img/ef11.jpg" alt="Effect #11" />
@@ -3180,7 +3180,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-12">
           <span class="effect-title">Effect #12</span>
           <div class="effect eff-12">
             <img src="img/ef12.jpg" alt="Effect #12" />
@@ -3412,7 +3412,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-13">
           <span class="effect-title">Effect #13</span>
           <div class="effect eff-13">
             <img src="img/ef13.jpg" alt="Effect #13" />
@@ -3643,7 +3643,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-14">
           <span class="effect-title">Effect #14</span>
           <div class="effect eff-14">
             <img src="img/ef14.jpg" alt="Effect #14" />
@@ -3885,7 +3885,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-15">
           <span class="effect-title">Effect #15</span>
           <div class="effect eff-15">
             <img src="img/ef15.jpg" alt="Effect #15" />
@@ -4129,7 +4129,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-16">
           <span class="effect-title">Effect #16</span>
           <div class="effect eff-16">
             <img src="img/ef16.jpg" alt="Effect #16" />
@@ -4381,7 +4381,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-17">
           <span class="effect-title">Effect #17</span>
           <div class="effect eff-17">
             <img src="img/ef17.jpg" alt="Effect #17" />
@@ -4644,7 +4644,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-18">
           <span class="effect-title">Effect #18</span>
           <div class="effect eff-18">
             <img src="img/ef18.jpg" alt="Effect #18" />
@@ -4867,7 +4867,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-19">
           <span class="effect-title">Effect #19</span>
           <div class="effect eff-19">
             <img src="img/ef19.jpg" alt="Effect #19" />
@@ -5137,7 +5137,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-20">
           <span class="effect-title">Effect #20</span>
           <div class="effect eff-20">
             <img src="img/ef20.jpeg" alt="Effect #20" />
@@ -5383,7 +5383,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-21">
           <span class="effect-title">Effect #21</span>
           <div class="effect eff-21">
             <img src="img/ef21.jpg" alt="Effect #21" />
@@ -5598,7 +5598,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-22">
           <span class="effect-title">Effect #22</span>
           <div class="effect eff-22">
             <div class="img-block img-block-left">
@@ -5841,7 +5841,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-23">
           <span class="effect-title">Effect #23</span>
           <div class="effect eff-23">
             <div class="img-block img-block-top">
@@ -6074,7 +6074,7 @@
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-24">
           <span class="effect-title">Effect #24</span>
           <div class="effect eff-24">
             <div class="img-block img-block-1">
@@ -6367,7 +6367,7 @@
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-25">
           <span class="effect-title">Effect #25</span>
           <div class="effect eff-25">
             <img src="img/ef25.jpg" alt="Effect #25" />
@@ -6624,7 +6624,7 @@ to {opacity: 0;}
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-26">
           <span class="effect-title">Effect #26</span>
           <div class="effect eff-26">
             <img src="img/ef26.jpg" alt="Effect #26" />
@@ -6842,7 +6842,7 @@ to {top: 400px;}
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-27">
           <span class="effect-title">Effect #27</span>
           <div class="effect eff-27">
             <img src="img/ef27.jpg" alt="Effect #27" />
@@ -7294,7 +7294,7 @@ to {top: 400px;}
         </div>
       </div>
       <div class="effect-pack">
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-28">
           <span class="effect-title">Effect #28</span>
           <div class="effect eff-28">
             <img src="img/ef28.jpg" alt="Effect #28" />
@@ -7529,7 +7529,7 @@ to {top: -200px;}
             </div>
           </div>
         </div>
-        <div class="effect-bar">
+        <div class="effect-bar" id="eff-29">
           <span class="effect-title">Effect #29</span>
           <div class="effect eff-29">
             <img src="img/ef29.jpg" alt="Effect #29" />
@@ -7758,7 +7758,7 @@ to {top: -200px;}
             </div>
           </div>
         </div>
-        <div class="effect-bar no-margin-right">
+        <div class="effect-bar no-margin-right" id="eff-30">
           <span class="effect-title">Effect #30</span>
           <div class="effect eff-30">
             <img src="img/ef30.jpg" alt="Effect #30" />
@@ -8205,6 +8205,12 @@ to {
       </div>
     </div>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-567c9f0fa216c3c9" async="async"></script>
+    <script type="text/javascript">
+      var addthis_config = {
+      data_track_address_bar: false,
+      data_track_clickback: false 
+      };
+    </script>
   </body>
 </html>
 
